# visionbuzz

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  LICENSE  README.md  firebase.json  firepit-log.txt  myenv.txt  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/extension_discovery/: devtools.json
Camera/: download.bat  output.txt
Camera/BLE_controller/: sdkconfig  sdkconfig.old
Camera/Cam_controller/: sdkconfig.old
Camera/Cam_controller/components/wifi/: CMakeLists.txt
Camera/Cam_controller/components/wifi/include/: wifi.h
Camera/Cam_controller/components/wifi/sources/: wifi.c
Camera/components/shell/: CMakeLists.txt
Camera/components/shell/include/: shell.h
Camera/components/shell/sources/: shell.c
Camera/main/: CMakeLists.txt  main.c
PCB/: PCB.kicad_pcb  PCB.kicad_pro  PCB.kicad_sch
android/: local.properties
backend/: .zlogin  DOCUMENTATION.md  README.md  app.py  db.sql  firebase_config.py  local_video_test.py  poc-client-single.py  poc-client-stream.py  requirements.txt  settings.py
facialdata/: face_encodings.pkl
facialdetection/: client-poc.py  detection-single-device-proof-of-concept.py  detection.py  server-poc.py
ios/: Podfile  senior-design-50b1e-firebase-adminsdk-wusdv-61c6ae0496.json
lib/: contacts.dart  device.dart  firebase_options.dart  home.dart  main.dart  settings.dart  themes.dart  upload.dart
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+114 files in other folders)
